# privchat

./: .env  .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md  SECRETS.md  build.rs  check_and_run_migrations.sh  config.example.toml  config.storm.toml  config.toml  file_local_server.py  run_migrations.sh  run_password_migration.sh  test-config.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: channel-read-cursor-gate.yml
deploy/: privchat.service
examples/: basic_conversation_test.rs  cache_usage.rs  current_status_demo.rs  database_usage.rs  file_upload_demo.rs  qr_login_smoke.rs  security_integration.rs  service_communication_demo.rs  simple_conversation_demo.rs
keys/: README.md
migrations/: 000_drop_all_tables.sql  001_create_tables.sql  002_add_friend_request_message.sql  002_add_message_partitions_2026_03_2026_04_and_default.sql  002_attachment_encryption.sql  003_channel_read_cursor.sql  003_group_settings_and_pinned_messages.sql  003_pts_key_channel_id_only.sql  004_add_user_channel_is_hidden.sql  004_entity_sync_versions.sql  004_money_message_dedup.sql  005_group_member_sync_version.sql  005_unify_channel_group_id_space.sql  006_device_session_state_check.sql  006_friend_group_sync_version.sql  007_message_reactions.sql  007_user_channels_sync_index.sql  008_channel_read_cursor_sync_version.sql  008_message_dedup_retention.sql  009_unify_conversation_id_sequence.sql  009_user_channel_hidden_backfill.sql  010_channel_entity_sync_sequence_realign.sql  010_message_search_trgm_index.sql  011_fix_file_upload_sequence.sql  011_message_search_bigram.sql  012_friendship_alias.sql  012_group_join_requests.sql  013_direct_channel_unique.sql  013_group_join_request_unique_pending.sql  014_client_msg_registry_device_scope.sql  014_v1_2_user_create_idempotent.sql  015_canonical_timeline_event.sql  015_v1_3_create_refresh_tokens.sql  016_group_member_consistency_backfill.sql  016_message_dispatch_outbox.sql  017_message_delivery_receipts.sql  017_privchat_bot_follow.sql  018_platform_settings.sql  018_user_group_qr_key.sql
scripts/: README.md  SERVICE_KEY_CONFIG.md  attachment_smoke_inspect.sh  ci_gate.sh  config.example.json  e2e-channel-transfer-smoke.sh  pre-loadtest-check.sh  test_admin_api.py  test_admin_api.sh
src/: cli.rs  config.rs  context.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs  sync.rs
src/auth/: device_manager.rs  device_manager_db.rs  jwt_service.rs  mod.rs  models.rs  password.rs  rsa_jwt_service.rs  service_key_manager.rs  session_state.rs  token.rs  token_issue_service.rs  token_revocation.rs  token_service.rs  unified_token_service.rs
src/channel_transfer/: mod.rs  relay_client.rs  types.rs  validation.rs
src/dispatcher/: middleware.rs  mod.rs
src/domain/: events.rs  mod.rs
src/handler/: channel_transfer_handler.rs  connect_message_handler.rs  disconnect_message_handler.rs  mod.rs  ping_message_handler.rs  rpc_message_handler.rs  send_message_handler.rs  subscribe_message_handler.rs
src/http/: envelope.rs  mod.rs  server.rs
src/infra/: auth_whitelist.rs  cache.rs  database.rs  (+25 more)
tests/: admin_user_create_test.rs  attachment_authz_db_test.rs  auth_unified_integration_test.rs  cache_test.rs  channel_read_cursor_gate_test.rs  channel_transfer_handler.rs  e2e_channel_transfer_smoke.rs  entity_sync_version_db_test.rs  message_router_test.rs  protocol_non_db_gate_test.rs  qr_login_integration_test.rs  qr_unit_test.rs  service_transfer_send.rs  sync_integration_test.rs  transfer.rs
(+272 files in other folders)
